--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,9 @@ body {
 }
 .startButton {
   flex-shrink: 0;
+  position: relative;
+  top: -50px;
+  right: -50px;
   border-radius: 9px;
   background: var(--Dark-Gray, #484041);
   text-align: center;
@@ -192,12 +195,14 @@ body {
   display: flex;
   width: 165px;
   height: 64px;
+  padding-left: 15px;
+  padding-right: 15px;
   flex-direction: column;
   justify-content: center;
   flex-shrink: 0;
   background-color: #1098f7;
   text-align: center;
-  border-radius: 9px;
+  border-radius: 15px;
   color: #fff;
   font-family: Roboto;
   font-size: 32px;
